<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>
    <!-- settings strings -->
    <string name="title_activity_settings">Настройки</string>
    <string name="permissions">Разрешения</string>
    <string name="changePermission">Изменить</string>
    <string name="location_permission_allowed">Разрешение предоставлено</string>
    <string name="location_permission_denied">Разрешение отклонено</string>
    <string name="region">Регион</string>
    <string name="determine_the_coordinates">Определить местоположение</string>
    <string name="city">Город</string>
    <string name="data">Данные</string>
    <string name="units">Единицы измерения</string>
    <string name="language">Язык</string>
    <string name="choose_language">Выбрать язык</string>

    <!-- connectivity status message -->
    <string name="connectivity_status_message">Нет соединения с интернетом</string>

    <!-- location permission denied message -->
    <string name="location_permission_denied_message">Нет разрешения на определение местоположения. Пожалуйста, включите разрешение в настройках</string>

    <!-- details strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clouds">Облачность:</string>
    <string name="humidity">Влажность:</string>
    <string name="pressure">Давление</string>
    <string name="wind">Ветер</string>
    <string name="wind_speed">Скорость</string>
    <string name="wind_deg">Направление</string>
    <string name="precipitation">Осадки</string>
    <string name="rain">Дождь</string>
    <string name="snow">Снег</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
