<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/region">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="coordinates"
            android:disableDependentsState="true"
            app:title="@string/determine_the_coordinates"/>

        <EditTextPreference
            android:dependency="coordinates"

            app:defaultValue="Tashkent"
            app:key="city"
            app:title="@string/city"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data">
        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/units"
            app:entryValues="@array/unit_values"
            app:key="units"
            app:title="@string/units"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">
        <ListPreference
            app:defaultValue="ru"
            app:entries="@array/lang"
            app:entryValues="@array/lang_values"
            app:key="lang"
            app:title="@string/choose_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
